2.0.67.676767 - 26.1.2 - the first iteration