@@ -24,68 +24,66 @@ import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.Att
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.CustomPotionContents;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.Enchants;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.hideflags.HideFlag;
-import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsComponentsTagReference;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsNBTTagReference;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsTooltipDisplayComponentTagReference;
 import com.mojang.authlib.GameProfile;
-import com.mojang.authlib.properties.PropertyMap;
 
-import net.minecraft.block.entity.BlockEntityType;
-import net.minecraft.component.type.AttributeModifiersComponent;
-import net.minecraft.component.type.BlockStateComponent;
-import net.minecraft.component.type.LoreComponent;
-import net.minecraft.component.type.NbtComponent;
-import net.minecraft.component.type.ProfileComponent;
-import net.minecraft.component.type.WritableBookContentComponent;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.TypedEntityData;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtString;
-import net.minecraft.text.RawFilteredPair;
-import net.minecraft.text.Text;
+import net.minecraft.world.level.block.entity.BlockEntityType;
+import net.minecraft.world.item.component.ItemAttributeModifiers;
+import net.minecraft.world.item.component.BlockItemStateProperties;
+import net.minecraft.world.item.component.ItemLore;
+import net.minecraft.world.item.component.CustomData;
+import net.minecraft.world.item.component.ResolvableProfile;
+import net.minecraft.world.item.component.WritableBookContent;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.item.component.TypedEntityData;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.StringTag;
+import net.minecraft.server.network.Filterable;
+import net.minecraft.network.chat.Component;
 
 public class ItemTagReferences {
 	
-	private static TagReference<NbtCompound, ItemStack> getComponentTagRefOfNBT(MVComponentType<NbtComponent> component) {
+	private static TagReference<CompoundTag, ItemStack> getComponentTagRefOfNBT(MVComponentType<CustomData> component) {
 		return new ComponentTagReference<>(component,
 				null,
-				componentValue -> componentValue == null ? new NbtCompound() : componentValue.copyNbt(),
-				r->NbtComponent.of(r));
+				componentValue -> componentValue == null ? new CompoundTag() : componentValue.copyTag(),
+				r-> CustomData.of(r));
 	}
-	private static TagReference<NbtCompound, ItemStack> getComponentTagRefOfEntityData(MVComponentType<TypedEntityData<EntityType<?>>> component) {
-		return new ComponentTagReference<>(component,
+	private static TagReference<TypedEntityData<EntityType<?>>, ItemStack> getComponentTagRefOfEntityData() {
+		return new ComponentTagReference<>(MVComponentType.ENTITY_DATA,
 				null,
-				componentValue -> componentValue == null ? new NbtCompound() : componentValue.getNbtWithoutId(),
-				r-> TypedEntityData.create(((TypedEntityData<EntityType<?>>)component.getInternalValue()).getType(),r));
+				componentValue -> componentValue == null ? TypedEntityData.of(EntityType.BAT,new CompoundTag()) : componentValue,
+				r-> r);
 	}
-	private static TagReference<NbtCompound, ItemStack> getComponentTagRefOfBlockEntityData(MVComponentType<TypedEntityData<BlockEntityType<?>>> component) {
-		return new ComponentTagReference<>(component,
+	private static TagReference<TypedEntityData<BlockEntityType<?>>, ItemStack> getComponentTagRefOfBlockEntityData() {
+		return new ComponentTagReference<>(MVComponentType.BLOCK_ENTITY_DATA,
 				null,
-				componentValue -> componentValue == null ? new NbtCompound() : componentValue.getNbtWithoutId(),
-				r-> TypedEntityData.create(((TypedEntityData<BlockEntityType<?>>)component.getInternalValue()).getType(),r));
+				componentValue -> componentValue == null ? TypedEntityData.of(BlockEntityType.COMMAND_BLOCK,new CompoundTag()) : componentValue,
+				r-> r);
 	}
 
 	public static final TagReference<CustomPotionContents, ItemStack> CUSTOM_POTION_CONTENTS = Version.<TagReference<CustomPotionContents, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.POTION_CONTENTS,
-					() -> MVMisc.newPotionContentsComponent(Optional.empty(), Optional.empty(), List.of()),
+					() -> MVMisc.newPotionContents(Optional.empty(), Optional.empty(), List.of()),
 					contents -> new CustomPotionContents(contents.customColor(), contents.customEffects()),
-					contents -> MVMisc.newPotionContentsComponent(Optional.empty(), contents.color(), contents.effects())))
+					contents -> MVMisc.newPotionContents(Optional.empty(), contents.color(), contents.effects())))
 			.range(null, "1.20.4", CustomPotionContentsNBTTagReference::new)
 			.get();
 	
 	public static final TagReference<Optional<String>, ItemStack> PROFILE_NAME = Version.<TagReference<Optional<String>, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.PROFILE,
 					null,
-					component -> component == null ? Optional.empty() : component.getName(),
-					name -> ProfileComponent.ofDynamic(name.orElse(""))))
+					component -> component == null ? Optional.empty() : component.name(),
+					name -> ResolvableProfile.createUnresolved(name.orElse(""))))
 			.range(null, "1.20.4", () -> TagReference.forItems(Optional::empty, new GameProfileNameNBTTagReference()))
 			.get();
 	public static final TagReference<Optional<GameProfile>, ItemStack> PROFILE = Version.<TagReference<Optional<GameProfile>, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.PROFILE,
 					null,
-					profile -> Optional.ofNullable(profile).map(ProfileComponent::getGameProfile),
-					profile -> profile.map(ProfileComponent::ofStatic).orElse(null)))
+					profile -> Optional.ofNullable(profile).map(ResolvableProfile::partialProfile),
+					profile -> profile.map(ResolvableProfile::createResolved).orElse(null)))
 			.range(null, "1.20.4", () -> TagReference.forItems(Optional::empty, new GameProfileNBTTagReference()))
 			.get();
 	
@@ -94,26 +92,24 @@ public class ItemTagReferences {
 					null,
 					component -> component == null ? new ArrayList<>() :
 						component.modifiers().stream().map(AttributeData::fromComponentEntry).collect(Collectors.toList()),
-					(component, list) -> (AttributeModifiersComponent) MVMisc.withAttributes(component,
+					(component, list) -> (ItemAttributeModifiers) MVMisc.withAttributes(component,
 							list.stream().map(AttributeData::toComponentEntry).toList())))
 			.range(null, "1.20.4", () -> TagReference.forItems(ArrayList::new, new AttributesNBTTagReference(AttributesNBTTagReference.NBTLayout.ITEM_OLD)))
 			.get();
 	
 	public static final TagReference<List<String>, ItemStack> WRITABLE_BOOK_PAGES = Version.<TagReference<List<String>, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.WRITABLE_BOOK_CONTENT,
-					() -> new WritableBookContentComponent(List.of()),
-					content -> content.pages().stream().map(RawFilteredPair::raw).collect(Collectors.toList()),
-					pages -> new WritableBookContentComponent(pages.stream().map(RawFilteredPair::of).toList())))
-			.range(null, "1.20.4", () -> TagReference.forItems(ArrayList::new, TagReference.forLists(String.class, new NBTTagReference<>(String[].class, "pages"))))
+					() -> new WritableBookContent(List.of()),
+					content -> content.pages().stream().map(Filterable::raw).collect(Collectors.toList()),
+					pages -> new WritableBookContent(pages.stream().map(Filterable::passThrough).toList())))
 			.get();
 	
 	public static final TagReference<Boolean, ItemStack> UNBREAKABLE = Version.<TagReference<Boolean, ItemStack>>newSwitch()
 			.range("1.21.5", null, () -> ComponentTagReference.forExistance(MVComponentType.UNBREAKABLE_1_21_5))
 			.range("1.20.5", "1.21.4", () -> ComponentTagReference.forExistance(MVComponentType.UNBREAKABLE_1_20_5_1_21_4, () -> Reflection.newInstance("net.minecraft.class_9300", new Class<?>[] {boolean.class}, true)))
-			.range(null, "1.20.4", () -> TagReference.forItems(() -> false, new NBTTagReference<>(Boolean.class, "Unbreakable")))
 			.get();
 	
-	public static final TagReference<NbtCompound, ItemStack> CUSTOM_DATA = Version.<TagReference<NbtCompound, ItemStack>>newSwitch()
+	public static final TagReference<CompoundTag, ItemStack> CUSTOM_DATA = Version.<TagReference<CompoundTag, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> getComponentTagRefOfNBT(MVComponentType.CUSTOM_DATA))
 			.range(null, "1.20.4", () -> new CustomDataNBTTagReference())
 			.get();
@@ -122,37 +118,24 @@ public class ItemTagReferences {
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.BLOCK_STATE,
 					null,
 					component -> component == null ? new HashMap<>() : new HashMap<>(component.properties()),
-					BlockStateComponent::new))
-			.range(null, "1.20.4", () -> TagReference.forItems(HashMap::new, TagReference.forMaps(
-					element -> element instanceof NbtString str ? MVMisc.value(str) : null,
-					NbtString::of,
-					new NBTTagReference<>(NbtCompound.class, "BlockStateTag"))))
+					BlockItemStateProperties::new))
 			.get();
 	
-	public static final TagReference<NbtCompound, ItemStack> BLOCK_ENTITY_DATA = Version.<TagReference<NbtCompound, ItemStack>>newSwitch()
-			.range("1.20.5", null, () -> getComponentTagRefOfBlockEntityData(MVComponentType.BLOCK_ENTITY_DATA))
-			.range(null, "1.20.4", () -> TagReference.forItems(NbtCompound::new, new NBTTagReference<>(NbtCompound.class, "BlockEntityTag")))
-			.get();
+	public static final TagReference<TypedEntityData<BlockEntityType<?>>, ItemStack> BLOCK_ENTITY_DATA = getComponentTagRefOfBlockEntityData();
 	
-	public static final TagReference<NbtCompound, ItemStack> ENTITY_DATA = Version.<TagReference<NbtCompound, ItemStack>>newSwitch()
-			.range("1.20.5", null, () -> getComponentTagRefOfEntityData(MVComponentType.ENTITY_DATA))
-			.range(null, "1.20.4", () -> TagReference.forItems(NbtCompound::new, new NBTTagReference<>(NbtCompound.class, "EntityTag")))
-			.get();
+	public static final TagReference<TypedEntityData<EntityType<?>>, ItemStack> ENTITY_DATA = getComponentTagRefOfEntityData();
 	
 	public static final TagReference<Enchants, ItemStack> ENCHANTMENTS = new EnchantsTagReference();
 	
-	public static final TagReference<List<Text>, ItemStack> LORE = Version.<TagReference<List<Text>, ItemStack>>newSwitch()
+	public static final TagReference<List<Component>, ItemStack> LORE = Version.<TagReference<List<Component>, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.LORE,
-					() -> LoreComponent.DEFAULT,
+					() -> ItemLore.EMPTY,
 					component -> new ArrayList<>(component.lines()),
-					lore -> new LoreComponent(lore.stream().limit(256).toList())))
-			.range(null, "1.20.4", () -> TagReference.forItems(ArrayList::new, TagReference.forLists(Text.class, new NBTTagReference<>(Text[].class, "display/Lore"))))
+					lore -> new ItemLore(lore.stream().limit(256).toList())))
 			.get();
 	
 	public static final TagReference<Map<HideFlag, Boolean>, ItemStack> HIDE_FLAGS = Version.<TagReference<Map<HideFlag, Boolean>, ItemStack>>newSwitch()
 			.range("1.21.5", null, () -> new HideFlagsTooltipDisplayComponentTagReference())
-			.range("1.20.5", "1.21.4", () -> new HideFlagsComponentsTagReference())
-			.range(null, "1.20.4", () -> new HideFlagsNBTTagReference())
 			.get();
 	
 }
